--- a/ToyProjectManagementApp/Views/Popup/SignOutPopup.xib
+++ b/ToyProjectManagementApp/Views/Popup/SignOutPopup.xib
@@ -14,6 +14,7 @@
                 <outlet property="backGroundView" destination="iN0-l3-epB" id="nhV-1F-NNJ"/>
                 <outlet property="cancelButton" destination="8yM-XY-IkJ" id="HNK-aN-tWP"/>
                 <outlet property="contentView" destination="11g-XW-oHo" id="f8h-53-NX5"/>
+                <outlet property="popupContentLabel" destination="56V-bQ-i5w" id="1Xr-NC-3e2"/>
                 <outlet property="popupTitleLabel" destination="QEM-LI-fS1" id="09f-R1-n07"/>
                 <outlet property="signOutButton" destination="vqJ-BC-tlX" id="a5I-ug-Cuc"/>
                 <outlet property="view" destination="iN0-l3-epB" id="9zb-Ig-zaL"/>
@@ -25,30 +26,41 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="11g-XW-oHo">
-                    <rect key="frame" x="71.666666666666686" y="373.66666666666669" width="250" height="130"/>
+                    <rect key="frame" x="71.666666666666686" y="366" width="250" height="145"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gFu-rq-J24">
-                            <rect key="frame" x="0.0" y="0.0" width="250" height="85"/>
+                            <rect key="frame" x="0.0" y="0.0" width="250" height="95"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그아웃 하시겠습니까?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEM-LI-fS1">
-                                    <rect key="frame" x="45" y="32.333333333333314" width="160" height="20.333333333333329"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Hj9-tO-yrh">
+                                    <rect key="frame" x="30" y="22.333333333333311" width="189.66666666666666" height="50.666666666666657"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그아웃 하시겠습니까?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEM-LI-fS1">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="20.333333333333332"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 내역은 모두 삭제됩니다" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="56V-bQ-i5w">
+                                            <rect key="frame" x="0.0" y="30.333333333333371" width="189.66666666666666" height="20.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstItem="QEM-LI-fS1" firstAttribute="centerY" secondItem="gFu-rq-J24" secondAttribute="centerY" id="ceH-yw-Hcp"/>
-                                <constraint firstItem="QEM-LI-fS1" firstAttribute="centerX" secondItem="gFu-rq-J24" secondAttribute="centerX" id="eX6-2M-Qsv"/>
-                                <constraint firstAttribute="height" constant="85" id="gOW-0y-MoQ"/>
+                                <constraint firstItem="Hj9-tO-yrh" firstAttribute="centerX" secondItem="gFu-rq-J24" secondAttribute="centerX" id="eLo-2s-NcL"/>
+                                <constraint firstAttribute="height" constant="95" id="gOW-0y-MoQ"/>
+                                <constraint firstItem="Hj9-tO-yrh" firstAttribute="centerY" secondItem="gFu-rq-J24" secondAttribute="centerY" id="gRk-95-Quu"/>
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="ttU-fu-6WI">
-                            <rect key="frame" x="0.0" y="86" width="250" height="44"/>
+                            <rect key="frame" x="0.0" y="96" width="250" height="49"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8yM-XY-IkJ">
-                                    <rect key="frame" x="0.0" y="0.0" width="124.33333333333333" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="124.33333333333333" height="49"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="tintColor" systemColor="labelColor"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -58,7 +70,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vqJ-BC-tlX">
-                                    <rect key="frame" x="125.33333333333331" y="0.0" width="124.66666666666669" height="44"/>
+                                    <rect key="frame" x="125.33333333333331" y="0.0" width="124.66666666666669" height="49"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="tintColor" systemColor="systemRedColor"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -80,7 +92,7 @@
                         <constraint firstAttribute="trailing" secondItem="gFu-rq-J24" secondAttribute="trailing" id="Uwd-rN-wmQ"/>
                         <constraint firstAttribute="bottom" secondItem="ttU-fu-6WI" secondAttribute="bottom" id="YMN-9w-fvg"/>
                         <constraint firstItem="ttU-fu-6WI" firstAttribute="leading" secondItem="11g-XW-oHo" secondAttribute="leading" id="bDM-0m-7MZ"/>
-                        <constraint firstAttribute="height" constant="130" id="bGM-8Z-Yc2"/>
+                        <constraint firstAttribute="height" constant="145" id="bGM-8Z-Yc2"/>
                     </constraints>
                 </view>
             </subviews>
