--- a/ToyProjectManagementApp/Views/ProjectContent.storyboard
+++ b/ToyProjectManagementApp/Views/ProjectContent.storyboard
@@ -174,6 +174,8 @@
                         <outlet property="listTitleLabel" destination="zLu-wq-uwH" id="0Vl-X1-edU"/>
                         <outlet property="moveLeftButton" destination="uw9-5R-07c" id="7PC-Ku-2gI"/>
                         <outlet property="moveRightButton" destination="FzS-g3-tVP" id="oCi-ko-En2"/>
+                        <outlet property="projectColorButton" destination="WZ1-rh-lFe" id="LAg-Pe-L1v"/>
+                        <outlet property="projectManagementButton" destination="JvD-SI-1wR" id="XVd-oZ-YMQ"/>
                         <outlet property="projectTitleLabel" destination="Phz-K8-DhW" id="ymi-D9-c5W"/>
                         <outlet property="stickyHeaderViewHeightAnchor" destination="tlF-zt-VZq" id="hbu-Zf-Vq2"/>
                         <outlet property="stickyHeaderViewTopAnchor" destination="PWj-Ds-p6Q" id="SrL-40-a3h"/>
@@ -199,7 +201,7 @@
         <image name="list" width="35" height="35"/>
         <image name="rainbowCircle" width="35" height="35"/>
         <namedColor name="primaryColor">
-            <color red="0.72941176470588232" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.72899997234344482" green="0.60000002384185791" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
